--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include 'bizsocket-tcp'
 include 'bizsocket-core'
 include 'bizsocket-base'
 include 'bizsocket-rx1'
+include 'bizsocket-rx2'
 include 'bizsocket-android'
 
 include 'sample:j2se'
